@@ -75,6 +75,10 @@ Extension Modules
 Library
 -------
 
+- ctypes callback functions only support 'fundamental' data types as
+  result type.  Raise an error when something else is used.  This is a
+  partial fix for Bug #1574584.
+
 - Bug #813342: Start the IDLE subprocess with -Qnew if the parent
   is started with that option.
 
